<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="binder"
            type="ggn.home.help.features.signUp.SignUpBinder" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout" />

            <LinearLayout
                android:id="@+id/linearLayoutForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin45dp"
                android:paddingRight="@dimen/margin45dp">

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/editTextUserName"
                        style="@style/editTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/margin5dp"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLength="30"
                        android:padding="@dimen/margin15dp"
                        android:text="@={binder.username}"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp">

                    <EditText
                        android:id="@+id/editTextMobile"
                        style="@style/editTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/margin5dp"
                        android:hint="@string/mobile"
                        android:imeOptions="actionDone"
                        android:inputType="textPhonetic"
                        android:maxLength="10"
                        android:padding="@dimen/margin15dp"
                        android:singleLine="true"
                        android:text="@={binder.mobile}"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp">

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/editTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/margin5dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:maxLength="20"
                        android:padding="@dimen/margin15dp"
                        android:singleLine="true"
                        android:text="@={binder.password}"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin10dp">

                    <EditText
                        android:id="@+id/editTextConfirmPassword"
                        style="@style/editTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/margin5dp"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:maxLength="20"
                        android:padding="@dimen/margin15dp"
                        android:singleLine="true"
                        android:text="@={binder.confirmPassword}"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20dp"
                    android:background="@color/colorPrimary"
                    android:onClick="@{binder::signUpClicked}"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text18sp" />

                <TextView
                    android:id="@+id/textViewLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="@dimen/margin10dp"
                    android:gravity="center|bottom"
                    android:padding="@dimen/margin15dp"
                    android:text="Already have an account? Sign In"
                    android:textSize="@dimen/text14sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>